I got stucked again but i will solve it

--- a/src/Components/Common.module.css
+++ b/src/Components/Common.module.css
@@ -45,9 +45,7 @@
     border-radius: 10px;
     cursor: pointer;
 }
-.warningContainer button:active {
 
-}
 .container {
     width:400px;
     height:240px;
